<resources>
    <string name="app_name" translatable="false">MorseTrainer</string>

    <string name="sounder_activity_label">Sounder</string>
    <string name="level_select_activity_label">Select Lesson</string>
    <string name="training_activity_label">Training Session</string>
    <string name="training_results_activity_label">Lesson Results</string>
    <string name="settings_activity_label">Settings</string>
    <string name="about_activity_label">About</string>

    <string name="sounder_button_label">Sounder</string>
    <string name="training_button_label">Koch Training</string>
    <string name="settings_button_label">Settings</string>
    <string name="about_button_label">About</string>
    <string name="retry_training_button_label">Try Again</string>
    <string name="next_training_button_label">Add a character</string>
    <string name="start_training_button_label">Touch to Start</string>
    <string name="setting_tone_frequency_label">Tone Frequency</string>
    <string name="setting_wpm_label">Words per Minute</string>
    <string name="setting_wpm_summary">Controls the speed each character is sent</string>
    <string name="setting_effective_wpm_label">Effective Words per Minute</string>
    <string name="setting_effective_wpm_summary">Allows extra spacing between characters</string>

    <string name="setting_tone_key" translatable="false">sender_tone</string>
    <string name="setting_wpm_key" translatable="false">sender_wpm</string>
    <string name="setting_effective_wpm_key" translatable="false">sender_effective_wpm</string>
    <string name="setting_last_lesson_key" translatable="false">last_lesson_index</string>
    <string name="setting_koch_lesson_length_key" translatable="false">koch_lesson_length</string>
    <string name="setting_koch_lesson_vary_word_size_key" translatable="false">koch_lesson_vary_word_size</string>
    <string name="setting_koch_lesson_train_new_more" translatable="false">koch_lesson_train_new</string>

    <string name="training_results_summary">Score: %d%% Mistakes: %d</string>
    <string name="training_results_error">Error: No input?</string>
    <string name="settings_sender_heading">Sender</string>
    <string name="settings_koch_heading">@string/training_button_label</string>
    <string name="setting_koch_lesson_length_label">Minutes per session</string>
    <string name="setting_koch_lesson_vary_label">Variable group length</string>
    <string name="setting_koch_lesson_vary_off">Always groups of 5</string>
    <string name="setting_koch_lesson_vary_on">Groups between 2 and 6 characters</string>
    <string name="setting_koch_lesson_train_new_label">Use new letters more frequently</string>
    <string name="setting_koch_lesson_train_new_on">New letters are more frequent</string>
    <string name="setting_koch_lesson_train_new_off">All letters have same chance</string>
    <string name="training_results_next_lesson_heading">Start next lesson:</string>
    <string name="about_heading">About</string>
    <string name="about_feedback_heading">Feedback</string>
    <string name="about_feedback_text">Any and all feedback is appreciated. Send your love and
        comments to ecwt@eoinrul.es</string>
    <string name="about_method_text">"This application teaches morse using the Koch method. In this         method, each character is sent at the speed you would hear it in a normal transmission but         characters are introduced to you slowly. This way, you build up familiarity with what each         character sounds like.  The first lesson starts with two characters and each subsequent         lesson introduces a new one. Your task is to listen to the transmitted sounds and transcribe         them. Once the lesson ends, you\\&apos;ll be presented with a short summary of how well you         scored. Once you can reliably identify 90% of the characters in a lesson, it might be time         to move on to the next character.     "</string>
    <string name="add_spaces_tip">Be sure to add spaces between the words!</string>
    <string name="auto_send">Auto send</string>

    <string-array name="tone_frequency_strings">
        <item>400Hz</item>
        <item>450Hz</item>
        <item>500Hz</item>
        <item>550Hz</item>
        <item>600Hz</item>
        <item>650Hz</item>
        <item>700Hz</item>
    </string-array>

    <string-array name="tone_frequency_values">
        <item>400</item>
        <item>450</item>
        <item>500</item>
        <item>550</item>
        <item>600</item>
        <item>650</item>
        <item>700</item>
    </string-array>
</resources>
